[project]
name = "webtunnel"
version = "0.1.0"
description = "Python library for HTTP tunnels with Kaggle-first support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "dexforint" }
]
dependencies = [
    "pyngrok>=7.2.8",
]

[project.scripts]
webtunnel = "webtunnel.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/webtunnel"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "A", "C4"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]